--- a/.github/workflows/merge-branch-to-master.yml
+++ b/.github/workflows/merge-branch-to-master.yml
@@ -1,14 +1,14 @@
 name: Create new PATCH version upon push to and merge into main branch
 on:
   push:
-    branches:
-      - 'main'
+# TODO den main filter wieder mit rein nehmen
+#    branches:
+#      - 'main'
 jobs:
   Create-new-PATCH-version:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-      packages: read
     steps:
       - name: checkout
         uses: actions/checkout@v4
@@ -22,8 +22,33 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
 
-      - name: Create new PATCH version tag
-        run: ./gradlew release
+#      - name: Create new PATCH version tag
+#        run: ./gradlew release
 
-      - name: Push new version tag
-        run: git push --tags
+      - name: Pre release version
+        id: pre-prelease
+        run: |
+          ./gradlew currentVersion
+
+      - name: Create new PATCH version tag
+        id: release
+        run: |
+          ./gradlew release \
+            -Prelease.customUsername=${{ github.actor }} \
+            -Prelease.customPassword=${{ github.token }}
+
+      - name: Post release version
+        id: post-prelease
+        run: |
+          ./gradlew currentVersion
+#
+#  - name: Commit changes
+#      uses: EndBug/add-and-commit@v9
+#      with:
+#        author_name: Your Name
+#        author_email: mail@example.com
+#        message: 'Your commit message'
+#        add: '*.js'
+#
+#      - name: Push new version tag
+#        run: git push --tags
