--- a/.github/workflows/merge-branch-to-master.yml
+++ b/.github/workflows/merge-branch-to-master.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Create new PATCH version tag
         id: release
         run: |
-          ./gradlew release \
+          ./gradlew release --stacktrace --debug \
             -Prelease.customUsername=${{ github.actor }} \
             -Prelease.customPassword=${{ github.token }}
 
