--- a/.github/workflows/merge-branch-to-master.yml
+++ b/.github/workflows/merge-branch-to-master.yml
@@ -13,7 +13,8 @@ jobs:
       - name: checkout
         uses: actions/checkout@v4
         with:
-          fetch_depth: 0
+          persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal access token.
+          fetch-depth: 0 # otherwise, there would be errors pushing refs to the destination repository.
 
       - name: setup JDK 17
         uses: actions/setup-java@v4
@@ -35,7 +36,7 @@ jobs:
       - name: Create new PATCH version tag
         id: release
         run: |
-          ./gradlew release --stacktrace --debug \
+          ./gradlew release -Prelease.localOnly \
             -Prelease.customUsername=${{ github.actor }} \
             -Prelease.customPassword=${{ github.token }}
 
@@ -43,6 +44,13 @@ jobs:
         id: post-prelease
         run: |
           ./gradlew currentVersion
+
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+#          github_token: ${{ secrets.GITHUB_TOKEN }}
+#          branch: ${{ github.ref }}
+          tags: true
 #
 #  - name: Commit changes
 #      uses: EndBug/add-and-commit@v9
