define sequentiality of the publish and versioning job

--- a/.github/workflows/publish-release-artifacts.yml
+++ b/.github/workflows/publish-release-artifacts.yml
@@ -40,6 +40,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   Create-new-MINOR-version:
+    needs: publish
+    name: Create new MINOR version tag
     runs-on: ubuntu-latest
     permissions:
       contents: write
