--- a/.github/workflows/publish-release-artifacts.yml
+++ b/.github/workflows/publish-release-artifacts.yml
@@ -58,17 +58,12 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
 
-      - name: Create new PATCH version tag
+      - name: Mark next version with MINOR increment
         id: release
         run: |
-          ./gradlew release -Prelease.versionIncrementer=incrementMinor -Prelease.localOnly \
+          ./gradlew markNextVersion -Prelease.versionIncrementer=incrementMinor -Prelease.localOnly \
             -Prelease.customUsername=${{ github.actor }} \
             -Prelease.customPassword=${{ github.token }}
-
-      - name: Post release version
-        id: post-prelease
-        run: |
-          ./gradlew currentVersion
 
       - name: Push changes
         uses: ad-m/github-push-action@master
